# aNiMated-batman

Tasks fol lab work/4-Dirichlet problem for Poisson equation/Система/: BuildLog.htm  Thumbs.db  Подписи к графикам.doc
Tasks fol lab work/7-ODE numerical integration/example1/: acChart.ocx  ppAbout.pag
TeamProjects/DirichletProblem/: DirichletProblem.sln
TeamProjects/DirichletProblem/DirichletProblem/: D_TestTask.cpp  D_TestTask.h  DirichletProblem.vcxproj  DirichletProblem.vcxproj.filters  MainWindow.h  Solvers.cpp  Solvers.h  main.cpp
TeamProjects/HESProject/: .gitignore  README.md  configure.py
TeamProjects/HESProject/CommonSolver/: HES_Solver.h
TeamProjects/HESProject/Solver/: README.md  solver.gyp
TeamProjects/HESProject/Solver/CommonSolver/: HES_Solver.h
TeamProjects/HESProject/UI/: .gitignore  README.md  package.json
TeamProjects/HESProject/UI/application/: bootstrap.js  (+1 more)
TeamProjects/diffusion-solver/: .gitignore
TeamProjects/diffusion-solver/core/: .gitignore  CMakeLists.txt  README.md
TeamProjects/diffusion-solver/core/include/: CoreGlobal.hpp  CoreUtils.hpp  DefaultSchemeInitialConditions.hpp  ExplicitSchemeSolver.hpp  ISchemeInitialConditions.hpp  ISchemeLayerGenerator.hpp  ImplicitSchemeSolver.hpp  SchemeGrid.hpp  SchemeInitialConditions.hpp  SchemeLayer.hpp  SchemeLayerGeneratorInitial.hpp  SchemeResult.hpp  SchemeResultsStorage.hpp  SchemeSolution.hpp  SchemeSolutionBuilder.hpp  SchemeSolver.hpp  SchemeSolverCommon.hpp  SchemeSolverExplicit.hpp  SchemeSolverImplicit.hpp  SchemeSolverIterationInfo.hpp  SchemeSolverMode.hpp  SchemeSolverResult.hpp  SchemeStatistic.hpp  SchemeTask.hpp  SchemeWeakLayer.hpp  diffusioncore
TeamProjects/diffusion-solver/core/src/: CoreUtils.cpp  DefaultSchemeInitialConditions.cpp  ExplicitSchemeSolver.cpp  ISchemeLayerGenerator.cpp  ImplicitSchemeSolver.cpp  SchemeGrid.cpp  SchemeInitialConditions.cpp  SchemeLayer.cpp  SchemeLayerGeneratorInitial.cpp  SchemeResult.cpp  SchemeResultsStorage.cpp  SchemeSolution.cpp  SchemeSolutionBuilder.cpp  SchemeSolver.cpp  SchemeSolverCommon.cpp  SchemeSolverExplicit.cpp  SchemeSolverImplicit.cpp  SchemeSolverIterationInfo.cpp  SchemeSolverResult.cpp  SchemeStatistic.cpp  SchemeTask.cpp  SchemeWeakLayer.cpp
TeamProjects/diffusion-solver/core/test/: .gitignore  CMakeLists.txt
TeamProjects/diffusion-solver/core/test/src/: ExplicitSchemeSolver_IterationInfo_test.cpp  ExplicitSchemeSolver_test.cpp  SchemeLayer_test.cpp  SchemeResult_test.cpp  SchemeSolution_test.cpp  TestsCommon.cpp  TestsCommon.hpp
TeamProjects/diffusion-solver/ui/: .gitignore  dsequationhelpdialog.cpp  dsequationhelpdialog.hpp  dsequationhelpdialog.ui  dsinitconditionsdialog.cpp  dsinitconditionsdialog.hpp  dsinitconditionsdialog.ui  dslayerpairanalysiswindow.cpp  dslayerpairanalysiswindow.hpp  dslayerpairanalysiswindow.ui  dsmainwindow.cpp  dsmainwindow.hpp  dsmainwindow.ui  dsmodel.cpp  dsmodel.hpp  dsparameterset.cpp  dsparameterset.hpp  dssettingsmanager.cpp  dssettingsmanager.hpp  dssolverexception.cpp  dssolverexception.hpp  dssolveriterationinfo.cpp  dssolveriterationinfo.hpp  dssolverthread.cpp  dssolverthread.hpp  dssolvingprogressdialog.cpp  dssolvingprogressdialog.hpp  dssolvingprogressdialog.ui  dssummarydialog.cpp  dssummarydialog.hpp  dssummarydialog.ui  dswindowmanager.cpp  dswindowmanager.hpp  idswindow.cpp  idswindow.hpp  iobserver.hpp  main.cpp  resources.qrc  ui.pro
(+26 files in other folders)
